[package]
name = "usb-rust"
version = "0.1.0"
authors = ["yunmo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.0", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
async-recursion = "1.1.1"
dioxus-desktop = "0.5.6"
manganis = "0.2.2"
dialoguer = "0.11.0"
glob = "0.3.1"
futures-util = "0.3.30"
wasm-bindgen = "0.2.92"
log = "0.4.22"
minio = "0.1.0"
env_logger = "0.11.5"
tokio = "1.39.2"
client = "0.1.1-beta1"
sysinfo = "0.31.2"
modify = "0.1.3"
winapi = "0.3.9"
windows ={version = "0.58.0", features=["Win32_UI_WindowsAndMessaging","Win32_System_LibraryLoader","Win32_Graphics_Gdi","Win32_Devices","Win32_Devices_Usb"]}
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"


